# ghnotifier

./: README.md  pyproject.toml
ghnotifier/: __main__.py  config.py  indicator.py  notifier.py
ghnotifier/ghnotifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
